// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getStepMetaProps когда текущий шаг еще не зареган 1`] = `
Object {
  "canBeSkipped": false,
  "hasControls": false,
  "header": undefined,
  "isAfterCurrent": false,
  "isBeforeCurrent": false,
  "isCurrent": true,
  "isFirst": true,
  "isLast": true,
  "isNext": false,
  "isPrevious": false,
  "isProcessing": false,
  "maxPath": 0,
  "order": 5,
  "selfControlled": false,
  "stepContainerRef": null,
}
`;

exports[`getStepMetaProps первый шаг - до текущего 1`] = `
Object {
  "canBeSkipped": false,
  "hasControls": false,
  "header": undefined,
  "isAfterCurrent": false,
  "isBeforeCurrent": true,
  "isCurrent": false,
  "isFirst": true,
  "isLast": false,
  "isNext": false,
  "isPrevious": false,
  "isProcessing": false,
  "maxPath": 0,
  "order": 1,
  "selfControlled": false,
  "stepContainerRef": Object {
    "current": null,
  },
}
`;

exports[`getStepMetaProps первый шаг - предыдущий 1`] = `
Object {
  "canBeSkipped": false,
  "hasControls": false,
  "header": undefined,
  "isAfterCurrent": false,
  "isBeforeCurrent": true,
  "isCurrent": false,
  "isFirst": true,
  "isLast": false,
  "isNext": false,
  "isPrevious": true,
  "isProcessing": false,
  "maxPath": 0,
  "order": 1,
  "selfControlled": false,
  "stepContainerRef": Object {
    "current": null,
  },
}
`;

exports[`getStepMetaProps первый шаг - текущий 1`] = `
Object {
  "canBeSkipped": false,
  "hasControls": false,
  "header": undefined,
  "isAfterCurrent": false,
  "isBeforeCurrent": false,
  "isCurrent": true,
  "isFirst": true,
  "isLast": false,
  "isNext": false,
  "isPrevious": false,
  "isProcessing": false,
  "maxPath": 0,
  "order": 1,
  "selfControlled": false,
  "stepContainerRef": Object {
    "current": null,
  },
}
`;

exports[`getStepMetaProps последний шаг - после текущего 1`] = `
Object {
  "canBeSkipped": false,
  "hasControls": false,
  "header": undefined,
  "isAfterCurrent": true,
  "isBeforeCurrent": false,
  "isCurrent": false,
  "isFirst": false,
  "isLast": true,
  "isNext": false,
  "isPrevious": false,
  "isProcessing": false,
  "maxPath": 0,
  "order": 3,
  "selfControlled": false,
  "stepContainerRef": Object {
    "current": null,
  },
}
`;

exports[`getStepMetaProps последний шаг - следующий 1`] = `
Object {
  "canBeSkipped": false,
  "hasControls": false,
  "header": undefined,
  "isAfterCurrent": true,
  "isBeforeCurrent": false,
  "isCurrent": false,
  "isFirst": false,
  "isLast": true,
  "isNext": true,
  "isPrevious": false,
  "isProcessing": false,
  "maxPath": 0,
  "order": 3,
  "selfControlled": false,
  "stepContainerRef": Object {
    "current": null,
  },
}
`;

exports[`getStepMetaProps последний шаг - текущий 1`] = `
Object {
  "canBeSkipped": false,
  "hasControls": false,
  "header": undefined,
  "isAfterCurrent": false,
  "isBeforeCurrent": false,
  "isCurrent": true,
  "isFirst": false,
  "isLast": true,
  "isNext": false,
  "isPrevious": false,
  "isProcessing": false,
  "maxPath": 0,
  "order": 3,
  "selfControlled": false,
  "stepContainerRef": Object {
    "current": null,
  },
}
`;

exports[`getStepMetaProps средний шаг - предыдущий 1`] = `
Object {
  "canBeSkipped": false,
  "hasControls": false,
  "header": undefined,
  "isAfterCurrent": false,
  "isBeforeCurrent": true,
  "isCurrent": false,
  "isFirst": false,
  "isLast": false,
  "isNext": false,
  "isPrevious": true,
  "isProcessing": false,
  "maxPath": 0,
  "order": 2,
  "selfControlled": false,
  "stepContainerRef": Object {
    "current": null,
  },
}
`;

exports[`getStepMetaProps средний шаг - следующий 1`] = `
Object {
  "canBeSkipped": false,
  "hasControls": false,
  "header": undefined,
  "isAfterCurrent": true,
  "isBeforeCurrent": false,
  "isCurrent": false,
  "isFirst": false,
  "isLast": false,
  "isNext": true,
  "isPrevious": false,
  "isProcessing": false,
  "maxPath": 0,
  "order": 2,
  "selfControlled": false,
  "stepContainerRef": Object {
    "current": null,
  },
}
`;

exports[`getStepMetaProps средний шаг - текущий 1`] = `
Object {
  "canBeSkipped": false,
  "hasControls": false,
  "header": undefined,
  "isAfterCurrent": false,
  "isBeforeCurrent": false,
  "isCurrent": true,
  "isFirst": false,
  "isLast": false,
  "isNext": false,
  "isPrevious": false,
  "isProcessing": false,
  "maxPath": 0,
  "order": 2,
  "selfControlled": false,
  "stepContainerRef": Object {
    "current": null,
  },
}
`;
